# grade-monitor

./: .env.example  .gitignore  README.md  docker-compose.yml
bot/: Dockerfile  pyproject.toml  test_login.py
bot/src/plugins/grade_monitor/: __init__.py  commands.py  config_manager.py  detector.py  notifier.py  parser.py  scheduler.py  scraper.py  storage.py
napcat/config/: onebot11.json
