[project]
name = "grade-monitor-bot"
version = "1.0.0"
description = "教务系统成绩监控 QQ 机器人"
requires-python = ">=3.10"

dependencies = [
    "nonebot2[httpx]>=2.3.0",
    "nonebot-adapter-onebot>=2.4.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "ddddocr>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "nonebot2[all]",
]
